--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
 aiogram==2.25.2
-beautifulsoup4==4.14.3
-langchain==1.1.0
-langchain_community==0.4.1
-langchain_core==1.1.0
-libzim==3.8.0
-numpy==2.3.5
-python-dotenv==1.2.1
-Requests==2.32.5
-selenium==4.38.0
-tqdm==4.67.1
-webdriver_manager==4.0.2
+pydantic<2.0.0
+langchain==0.1.20
+langchain-community==0.0.38
+langchain-core==0.1.52
+faiss-cpu
+yandexcloud>=0.228.0
+grpcio>=1.60.0
+beautifulsoup4>=4.12.0
+libzim>=3.0.0
+numpy>=1.24.0
+python-dotenv>=1.0.0
+requests>=2.31.0
+selenium>=4.10.0
+tqdm>=4.66.0
+webdriver_manager>=4.0.1
